--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
         
         <!--About -->
-        <div id="main-wrapper" class="container-fluid scene_element scene_element--fadein about">
+        <div id="about" class="container-fluid scene_element scene_element--fadein">
             <div class="row">
                 <div id="my-image" class="col-md-4 col-md-offset-1">
                     <img class="img-responsive" src="img/happy-stickman.png">
